--- a/Project/Windows/Dorothy/Dorothy.vcxproj.filters
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj.filters
@@ -240,6 +240,9 @@
     <ClCompile Include="..\..\..\Source\Basic\Renderer.cpp">
       <Filter>Basic</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\Source\Node\RenderTarget.cpp">
+      <Filter>Node</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Source\3rdParty\FileSystem\mkdir.h">
@@ -455,6 +458,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\Source\Basic\Renderer.h">
       <Filter>Basic</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\Source\Node\RenderTarget.h">
+      <Filter>Node</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
