--- a/Project/Windows/Dorothy/Dorothy.vcxproj
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj
@@ -71,6 +71,7 @@
     <ClCompile Include="..\..\..\Source\3rdParty\Zip\Support\ZipUtils.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\..\..\Source\Animation\Action.cpp" />
     <ClCompile Include="..\..\..\Source\Basic\Application.cpp" />
     <ClCompile Include="..\..\..\Source\Basic\AutoreleasePool.cpp" />
     <ClCompile Include="..\..\..\Source\Basic\Camera.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="..\..\..\Source\3rdParty\Zip\Support\unzip.h" />
     <ClInclude Include="..\..\..\Source\3rdParty\Zip\Support\zip.h" />
     <ClInclude Include="..\..\..\Source\3rdParty\Zip\Support\ZipUtils.h" />
+    <ClInclude Include="..\..\..\Source\Animation\Action.h" />
     <ClInclude Include="..\..\..\Source\Basic\Application.h" />
     <ClInclude Include="..\..\..\Source\Basic\AutoreleasePool.h" />
     <ClInclude Include="..\..\..\Source\Basic\Camera.h" />
